--- a/week3-red-bicicletas/package.json
+++ b/week3-red-bicicletas/package.json
@@ -16,7 +16,9 @@
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
