--- a/week3-red-bicicletas/package.json
+++ b/week3-red-bicicletas/package.json
@@ -13,12 +13,15 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
