--- a/week3-red-bicicletas/package.json
+++ b/week3-red-bicicletas/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.9.0",
     "mongoose-unique-validator": "^3.1.0",
